tests/valid/function/type_forall_fn_value_pass_and_call.facet
fn id<T>(x: affine T) -> affine T {
  x
}

fn apply(f: unrestricted for<T> fn(affine T) -> affine T) -> affine isize {
  (f 1)
}

fn main() -> affine isize {
  (apply id)
}
