tests/invalid/lifetime/return_local_mut_borrow.facet
fn f(mut x: unrestricted isize) -> affine &mut unrestricted isize {
    (&mut x)
}
